<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_acc"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="My Account" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/emergency_contacts" />

    </group>

    <item android:title="Updates">
        <menu>

            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_new_releases_black_24dp"
                android:title="My Reported Cases" />

            <item
                android:id="@+id/nav_announce"
                android:icon="@drawable/ic_new_releases_black_24dp"
                android:title="@string/announcements" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="Twitter Communication" />
            <item
                android:id="@+id/nav_uaera"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="About Esafe" />
        </menu>
    </item>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about_app" />

        </menu>
    </item>

</menu>
