<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/underline_white"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/vir_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="2dp"
            android:text="English" />


        <TextView
            android:id="@+id/vir_lug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="2dp"
            android:text="Luganda"
            android:visibility="gone" />

        <TextView
            android:id="@+id/vir_swahili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="2dp"
            android:text="Kiswahili" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vir_persona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline_white"
                    android:padding="2dp"
                    android:text="Person"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/vir_name_lay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vir_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Names of Suspected Case" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/vir_tel_lay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vir_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contact Number" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/vir_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Not Me!" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/vir_travel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline_white"
                    android:padding="5dp"
                    android:text="Have You Travelled Recently"
                    android:textColor="@color/load"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/vir_travel_recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Yes" />

                <Spinner
                    android:id="@+id/vir_place"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:padding="2dp"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dropdown"
                    android:visibility="gone" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/vir_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline_white"
                    android:padding="5dp"
                    android:text="@string/common_symptoms"
                    android:textColor="@color/load"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/vir_fever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/fever" />

                <CheckBox
                    android:id="@+id/vir_tired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tiredness" />

                <CheckBox
                    android:id="@+id/vir_cough"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/dry_cough" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/vir_others"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/underline_white"
                    android:padding="5dp"
                    android:text="@string/other_symptoms"
                    android:textColor="@color/load"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/vir_breath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/breathing_issues" />

                <CheckBox
                    android:id="@+id/vir_sore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sore_throat" />

                <CheckBox
                    android:id="@+id/vir_pain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/aches_pains" />

                <CheckBox
                    android:id="@+id/vir_nose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/nausea_runny_nose_diarrhoea" />
            </LinearLayout>

            <Button
                android:id="@+id/vir_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="@string/alert_authorities"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>